--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,18 +8,18 @@
     <servlet-name>main</servlet-name>
     <servlet-class>rw.kwizera.MainServlet</servlet-class>
   </servlet>
-  <servlet>
-    <servlet-name>login</servlet-name>
-    <servlet-class>rw.kwizera.LoginServerlet</servlet-class>
-  </servlet>
+<!--  <servlet>-->
+<!--    <servlet-name>login</servlet-name>-->
+<!--    <servlet-class>rw.kwizera.LoginServerlet</servlet-class>-->
+<!--  </servlet>-->
   <servlet-mapping>
     <servlet-name>main</servlet-name>
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>login</servlet-name>
-    <url-pattern>/login</url-pattern>
-  </servlet-mapping>
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>login</servlet-name>-->
+<!--    <url-pattern>/login</url-pattern>-->
+<!--  </servlet-mapping>-->
   <session-config>
     <session-timeout>
       30
